--- a/css/breeds.css
+++ b/css/breeds.css
@@ -44,9 +44,9 @@ p {
 }
 
 #cats {
+        margin: 0px 20px 20px 0px;
         width:20%;
         float:left;
-        margin: 20px;
         border:10px solid #F49CC4;
 }
 
